# CG_labs

game_engine/: CMakeLists.txt  Laba6.sln  main.cpp
game_engine/Laba6/: Camera.cs  ImGuiController.cs  Laba6.csproj  Program.cs  Shader.cs  Texture.cs  Window.cs
game_engine/Shaders/: lighting.fs
game_engine/imgui/: imgui_impl_qt.cpp
game_engine/include/: Camera.h  ImGuiController.h  MainWindow.h  SceneWindow.h  Shader.h  Texture.h
game_engine/src/: SceneWindow.cpp
lab_2/: CMakeLists.txt  glew_test  main.cpp
lab_3/: CMakeLists.txt  app  main.cpp
lab_4/: CMakeLists.txt  main.cpp  shadow_program
lab_5/: CMakeLists.txt  fragment_shader.glsl  main.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/Engine/include/: Camera.h  Engine.h  Light.h  MainWindow.h  PhysicsSystem.h  SceneWidget.h  mainwindow.ui
lab_6/Engine/shaders/: fragment_shader.fs  light_fragment_shader.fs  light_vertex_shaders.vs  vertex_shader.vs
lab_6/Engine/src/: Camera.cpp  MainWindow.cpp  SceneWidget.cpp
lab_6/objects/include/: SimpleObject.h  character.h
lab_6/objects/src/: character.cpp
